--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,5 +8,12 @@
 html,body{
     width: 100%;
     height:100%;
-      background-color: #ffff;
+    background-color: #0c0a09;
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+  html {
+    font-size: 14px;
+  }
 }
